src/components/form/index.less
:host {
  display: block;
}
.l-form {
  display: flex;
  gap: 20px;
  flex-flow: column nowrap;
}

/** 行内表单 */
.l-form-inline {
  display: flex;
  gap: 20px;
  flex-flow: row wrap;
}
.l-form.l-form-inline {
  --l-form-item-display: flex;
}

/* 对齐方式: left */
.l-form.l-form--left {
  --l-form-label-align: left;
}
/* 对齐方式: top */
.l-form.l-form--top {
  --l-form-item-display: grid;
  --l-form-label-align: left;
  --l-form-label-empty-display: none;
  grid-template-columns: 1fr;
}

